--- a/students.html
+++ b/students.html
@@ -10,7 +10,7 @@
 <body>
 <div class="master-wrapper">
 
-<div id="mainPop" class="pop">
+<div id="mainPop" class="pop" style="padding-bottom:0px;">
   <p style="font-size:20px">Enter your child's last name or PIN below</p>
   <div id="searchFieldContainerDiv">
     <input id="searchField" type="text" placeholder="enter last name or PIN" oninput="pinAutoEnter()" onkeydown="if(event.keyCode==13)document.getElementById('submitButton').click()"/>
@@ -18,16 +18,16 @@
   </div>
   <p id="lastUpdated" style="color:#ddd"></p>
   <p class="currentMissionsButton ptr" onclick="currentMissionsButton()" style="margin:30px auto;">Download this week's missions</p>
-<!--   <div>
+  <div>
     <table id="mainTable">
       <tr>
-        <td id="main0" onclick="studentMenuSwitch(0)"></td>
-        <td id="main1" onclick="studentMenuSwitch(1)">CALENDAR</td>
-        <td id="main2" onclick="studentMenuSwitch(2)">RESOURCES</td>
-        <td id="main3" onclick="studentMenuSwitch(3)">HELP</td>
+        <td id="main0" onclick="mainMenuSwitch(0)">MISSIONS</td>
+        <td id="main1" onclick="mainMenuSwitch(1)">CALENDAR</td>
+        <td id="main2" onclick="mainMenuSwitch(2)">RESOURCES</td>
+        <td id="main3" onclick="mainMenuSwitch(3)">HELP</td>
       </tr>
     </table>
-  </div> -->
+  </div>
 
 </div>
 
@@ -71,7 +71,16 @@
   <div class="navigationButtonContainer">
     <div class="backButton ptr" onclick="pop(['currentMissionsPop'],['mainPop'])"><span>f</span></div>
   </div>
-    <p id="passThruAlertMssg" style="text-align:center;margin-top:35px;">Since today is a new class day, please choose which missions you wish to download.</p>
+    <p id="passThruAlertMssg" style="text-align:center;margin-top:35px;">Since today is a new class day, please choose which missions you wish to download:</p>
+    <div class="currentMissionsButton ptr" style="margin-top:35px" onclick="downloadCurrentMissions(true)">LAST WEEK'S MISSIONS<br>(DUE TODAY)</div>
+    <div class="currentMissionsButton ptr" style="margin-top:35px" onclick="downloadCurrentMissions(false)">NEW MISSIONS<br>(ASSIGNED TODAY)</div>
+</div>
+
+<div id="currentMissionsPop2" class="pop">
+  <div class="navigationButtonContainer">
+    <div class="backButton ptr" onclick="pop(['currentMissionsPop2'],['missionsPop'])"><span>f</span></div>
+  </div>
+    <p id="passThruAlertMssg" style="text-align:center;margin-top:35px;">Since today is a new class day, please choose which missions you wish to download:</p>
     <div class="currentMissionsButton ptr" style="margin-top:35px" onclick="downloadCurrentMissions(true)">LAST WEEK'S MISSIONS<br>(DUE TODAY)</div>
     <div class="currentMissionsButton ptr" style="margin-top:35px" onclick="downloadCurrentMissions(false)">NEW MISSIONS<br>(ASSIGNED TODAY)</div>
 </div>
@@ -145,8 +154,7 @@
 </div>
 
 <div id="missionsPop" class="pop">
-  <p class="note" style="margin-top:0px">Link to this week's mission is on home page</p>
-  <div id="asmvHeaderContainer" style="position:sticky;top:348px;background-color:#111;">
+  <p class="currentMissionsButton ptr" onclick="currentMissionsButton2()" style="margin:0px auto 20px auto;">Download this week's missions</p>  <div id="asmvHeaderContainer">
     <div class="asmvHeader">ACTIVITY SHEETS</div>
     <div class="asmvHeader">MEMORY VERSES</div>
   </div>
@@ -156,6 +164,17 @@
     <div id="mvPop"></div>
   </div>
   <p style="font-size:18px;text-align:left;width:200px"><span class='colorCode' style='background-color:green'></span> = complete<br><span class='colorCode' style='background-color:darkorange;margin-top:10px'></span> = partially complete<br><span class='colorCode' style='background-color:black;margin-top:10px'></span> = incomplete</p>
+</div>
+
+<div id="missionsPop2" class="pop">
+  <div id="asmvHeaderContainer2">
+    <div class="asmvHeader">ACTIVITY SHEETS</div>
+    <div class="asmvHeader">MEMORY VERSES</div>
+  </div>
+  <div id="asmvPopContainer2">
+    <div id="asPop2"></div>
+    <div id="mvPop2"></div>
+  </div>
 </div>
 
 <div id="asPtsPop" class="pop">
@@ -316,19 +335,13 @@
 <div id="resourcesPop" class="pop" style="text-align:left;">
   <p><a target="_blank" href="docs/handbook.pdf">Download class handbook</a></p>
   <p><a target="_blank" href="docs/handouts/doctrinal-objectives/year-a-1-doctrinal-objectives-handout.pdf">1st Quarter Doctrinal Objectives</a></p>
-  <p><a target="_blank" href="https://www.facebook.com/groups/ksgrade2">Join our class's private Facebook page</a></p>
-  <p><a target="_blank" href="https://youtube.com/playlist?list=PL7iQZDmvw8GHXTnAoOT0UNS38yCKIqwRy">View lesson and memory verse videos</a></p>
   <p><a href="sms:18643023502?&body=JOIN">Text "JOIN" to 864-302-3502</a><br>to receive weekly update links by text</p>
   <p><a href="mailto:jonathan@ksgrade2.com?subject=JOIN&body=JOIN">Email "JOIN" to jonathan@ksgrade2.com</a><br>to receive weekly updates by email</p>
+  <p><a target="_blank" href="docs/mr-mulkey-contact-info.vcf">Add Mr. Mulkey's contact info to your contacts</a></p>
+  <p>Join our class' private Facebook Group or view lesson and memory verse videos:</p>
   <div class="socialMediaFlexDiv" style="margin-top:20px">
     <a target="_blank" href="https://www.facebook.com/groups/ksgrade2"><div class="fbLink ptr"></div></a>
     <a target="_blank" href="https://youtube.com/playlist?list=PL7iQZDmvw8GHXTnAoOT0UNS38yCKIqwRy"><div class="ytLink ptr"></div></a>
-  </div>
-  <p style="text-align:center;margin-top:20px;border-top:1px solid #555;padding-top:20px;color:white"><a target="_blank" href="docs/mr-mulkey-contact-info.vcf">Add Mr. Mulkey's contact info to your contacts</a> or use the buttons to call, text, or email</p>
-  <div class="navigationButtonContainer" style="margin-top:10px;">
-    <a href="tel:8645694879"><div class="contactButton">x</div></a>
-    <a href="sms:8645694879"><div class="contactButton">d</div></a>
-    <a href="mailto:jonathan@ksgrade2.com"><div class="contactButton">v</div></a>
   </div>
 </div>
 
@@ -336,6 +349,15 @@
   <p class="do" style="font-size:30px;font-weight:bold;margin-bottom:0px;">Reminder:</p>
   <p id="alertMssg" style="font-size:25px;text-align:left;margin-top:15px;line-height:1.5;"></p>
   <div class="okButton ptr" style="margin-top:50px" onclick="loadStudent(_ci);pop(['alertPop'],['studentPop','studentStatsPop'])">OK</div>
+</div>
+
+<div id="helpPop" class="pop">
+  <p>Use the contact buttons below to call, text, or email Mr. Mulkey</p>
+  <div class="navigationButtonContainer" style="margin-top:10px;">
+    <a href="tel:8645694879"><div class="contactButton">x</div></a>
+    <a href="sms:8645694879"><div class="contactButton">d</div></a>
+    <a href="mailto:jonathan@ksgrade2.com"><div class="contactButton">v</div></a>
+  </div>
 </div>
 
 </div>
