--- a/students.html
+++ b/students.html
@@ -17,7 +17,7 @@
     <div id="submitButton" class="ptr" onclick="findStudent()">S</div>
   </div>
   <p id="lastUpdated" style="color:#ddd"></p>
-  <p class="currentMissionsButton ptr" onclick="currentMissionsButton()" style="margin:30px auto;">Download this week's missions</p>
+  <p class="currentMissionsButton ptr" onclick="currentMissionsButton()" style="margin:30px auto 40px auto;">Download Current Missions</p>
   <div>
     <table id="mainTable">
       <tr>
@@ -155,8 +155,8 @@
 
 <div id="missionsPop" class="pop">
   <p class="currentMissionsButton ptr" onclick="currentMissionsButton2()" style="margin:0px auto 20px auto;">Download this week's missions</p>  <div id="asmvHeaderContainer">
-    <div class="asmvHeader">ACTIVITY SHEETS</div>
-    <div class="asmvHeader">MEMORY VERSES</div>
+    <div class="asmvHeader">PREVIOUS<br>ACTIVITY SHEETS</div>
+    <div class="asmvHeader">PREVIOUS<br>MEMORY VERSES</div>
   </div>
   <p id="initialMissionsNote" class="popText"></p>
   <div id="asmvPopContainer">
@@ -168,8 +168,8 @@
 
 <div id="missionsPop2" class="pop">
   <div id="asmvHeaderContainer2">
-    <div class="asmvHeader">ACTIVITY SHEETS</div>
-    <div class="asmvHeader">MEMORY VERSES</div>
+    <div class="asmvHeader">PREVIOUS<br>ACTIVITY SHEETS</div>
+    <div class="asmvHeader">PREVIOUS<br>MEMORY VERSES</div>
   </div>
   <div id="asmvPopContainer2">
     <div id="asPop2"></div>
@@ -334,7 +334,7 @@
 
 <div id="resourcesPop" class="pop" style="text-align:left;">
   <p><a target="_blank" href="docs/handbook.pdf">Download class handbook</a></p>
-  <p><a target="_blank" href="docs/handouts/doctrinal-objectives/year-a-1-doctrinal-objectives-handout.pdf">1st Quarter Doctrinal Objectives</a></p>
+  <p><a target="_blank" href="docs/handouts/doctrinal-objectives/year-a-1-doctrinal-objectives-handout.pdf">Doctrinal Objectives</a></p>
   <p><a href="sms:18643023502?&body=JOIN">Text "JOIN" to 864-302-3502</a><br>to receive weekly update links by text</p>
   <p><a href="mailto:jonathan@ksgrade2.com?subject=JOIN&body=JOIN">Email "JOIN" to jonathan@ksgrade2.com</a><br>to receive weekly updates by email</p>
   <p><a target="_blank" href="docs/mr-mulkey-contact-info.vcf">Add Mr. Mulkey's contact info to your contacts</a></p>
