--- a/students.html
+++ b/students.html
@@ -352,7 +352,7 @@
 </div>
 
 <div id="helpPop" class="pop">
-  <p>Use the contact buttons below to call, text, or email Mr. Mulkey</p>
+  <p>Use the contact buttons below to<br>call, text, or email Mr. Mulkey</p>
   <div class="navigationButtonContainer" style="margin-top:10px;">
     <a href="tel:8645694879"><div class="contactButton">x</div></a>
     <a href="sms:8645694879"><div class="contactButton">d</div></a>
