--- a/students.html
+++ b/students.html
@@ -36,7 +36,7 @@
     <div class="homeButton ptr" onclick="goHome()">5</div>
   </div>
   <div id="studentPopContainerDiv">
-    <div id="studentPopInsignia" class="ptr" onclick="loadRankTable()"></div>
+    <div id="studentPopInsignia" class="ptr" onclick="loadRankTable();resetStudentMenu();"></div>
     <div id="studentPopInfo">
       <p id="studentPopRankName"></p>
       <p id="studentPopName"></p>
@@ -113,11 +113,6 @@
     <p id="participationTableP"></p>
     <table id="participationTable" class="progressBarTable"></table>
   </div>
-
-<!--   <div id="rankProgressTableDiv" class="ptr" onclick="loadRankTable()">
-    <p id="rankProgressTableP" style="margin-top:20px"></p>
-    <table id="rankProgressTable"></table>
-  </div> -->
 
   <div id="lbDiv">
     <p id="lbHeader">Leader Boards</p>
