--- a/students.html
+++ b/students.html
@@ -17,7 +17,7 @@
     <div id="submitButton" class="ptr" onclick="findStudent()">S</div>
   </div>
   <p id="lastUpdated" style="color:#ddd"></p>
-  <p class="currentMissionsButton ptr" onclick="currentMissionsButton()" style="margin:30px auto 40px auto;">Download Current Missions</p>
+  <p class="currentMissionsButton ptr" onclick="currentMissionsButton()" style="margin:30px auto 40px auto;">Download Current Missions.</p>
   <div>
     <table id="mainTable">
       <tr>
