--- a/students.html
+++ b/students.html
@@ -353,6 +353,8 @@
     <a href="sms:8645694879"><div class="contactButton">d</div></a>
     <a href="mailto:jonathan@ksgrade2.com"><div class="contactButton">v</div></a>
   </div>
+  <p><br>Tutorial on how to use this web portal:</p>
+  <iframe width="388" height="218" src="https://www.youtube.com/embed/VdnOIzBlcKk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 </div>
