--- a/students.html
+++ b/students.html
@@ -353,8 +353,8 @@
     <a href="sms:8645694879"><div class="contactButton">d</div></a>
     <a href="mailto:jonathan@ksgrade2.com"><div class="contactButton">v</div></a>
   </div>
-  <p><br>Tutorial on how to use this web portal:</p>
-  <iframe width="388" height="218" src="https://www.youtube.com/embed/VdnOIzBlcKk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <p style="border-top: 1px solid #555;padding-top: 20px">Tutorial on how to use this web portal:</p>
+  <iframe style="border: 1px solid #aaa" width="388" height="218" src="https://www.youtube.com/embed/VdnOIzBlcKk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 </div>
