--- a/class/index.html
+++ b/class/index.html
@@ -879,7 +879,7 @@
   </div>
 </div>
 
-<script src="backup2.js"></script>
+<script src="backup.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
