--- a/class/index.html
+++ b/class/index.html
@@ -82,7 +82,7 @@
     <div class="backButton ptr" onclick="goHome()">f</div>
     <div class="otherButton ptr" onclick="pop(['mainMenuPop'],['advancedOptionsPop'])">Advanced</div>
   </div>
-  <div class="button ptr" onclick="pop(['mainMenuPop'],['calendarPop'])">Calendar</div>
+  <div class="button ptr" onclick="pop(['mainMenuPop'],['calendarPop']);showMaxPts(false,false,true)">Calendar</div>
   <div class="button ptr" onclick="loadAttStats()">Attendance Stats</div>
   <div class="button ptr" onclick="sortChoicePop()">Sort Students <span class="buttonArrow"> ></span></div>
   <div id="drawButton" class="button ptr" onclick="clearDrawingWinner(); pop(['mainMenuPop'],['drawPop'])">Drawing</div>
