--- a/class/index.html
+++ b/class/index.html
@@ -823,6 +823,7 @@
 </div>
 
 <script src="backup.js"></script>
+<!-- <script src="archived-backup.js"></script> -->
 <script src="main.js"></script>
 </body>
 </html>
