--- a/students.html
+++ b/students.html
@@ -344,9 +344,10 @@
   <p class="do" style="font-size:30px;font-weight:bold;margin-bottom:0px;">Reminder:</p>
   <p id="alertMssg" style="font-size:25px;text-align:left;margin-top:15px;line-height:1.5;"></p>
   <div class="okButton ptr" style="margin-top:50px" onclick="loadStudent(_ci);pop(['alertPop'],['studentPop','studentStatsPop'])">OK</div>
-  <div class="checkboxContainer" style="margin-top:25px">
+<!--   <div class="checkboxContainer" style="margin-top:25px">
     <label class="checkboxLabel"><input type="checkbox" id="dontShowCheck" class="checkbox"> don't show this message again</label>
-  </div></div>
+  </div> -->
+</div>
 
 <div id="helpPop" class="pop">
   <p>Use the contact buttons below to<br>call, text, or email Mr. Mulkey</p>
