--- a/class/index.html
+++ b/class/index.html
@@ -14,7 +14,7 @@
     <div id="topMenuContainer">
         <div id="mainMenuButton" class="roundButton2 ptr" onclick="pop(['mainPop'],['mainMenuPop'])">H</div>
         <div id="alertButton" class="roundButton2 ptr" onclick="alertsPop()">#</div>
-        <div id="lockButton" class="roundButton2 ptr" onclick="disableAtt()">K</div>
+        <div id="lockButton" class="roundButton2 ptr" onclick="disableAtt()">J</div>
         <!-- <div id="allergiesButton" class="roundButton2 ptr" style="padding-top:6px" onclick="allergiesPop()">A</div> -->
         <div id="attCountButton" class="roundButton2 ptr" onclick="loadAttendees()">0</div>
         <div id="logButton" class="roundButton2 ptr" onclick="logPop()">F</div>
