--- a/students.html
+++ b/students.html
@@ -72,9 +72,9 @@
   <div class="navigationButtonContainer">
     <div class="backButton ptr" onclick="pop(['currentMissionsPop'],['mainPop'])"><span>f</span></div>
   </div>
-    <p id="passThruAlertMssg" style="text-align:center;margin-top:35px;">Since today is a new class day, please choose which missions you wish to download:</p>
-    <div class="currentMissionsButton ptr" style="margin-top:35px" onclick="downloadCurrentMissions(true)">LAST SUNDAY'S MISSIONS<br>(DUE TODAY)</div>
-    <div class="currentMissionsButton ptr" style="margin-top:35px" onclick="downloadCurrentMissions(false)">NEW MISSIONS<br>(DUE NEXT SUNDAY)</div>
+    <p id="passThruAlertMssg" style="text-align:center;margin-top:35px;">Please choose which missions<br>you wish to download:</p>
+    <div class="currentMissionsButton ptr" style="margin-top:35px" onclick="downloadCurrentMissions(true)">MISSIONS THAT ARE<br>DUE TODAY</div>
+    <div class="currentMissionsButton ptr" style="margin-top:35px" onclick="downloadCurrentMissions(false)">NEW MISSIONS<br>(not due yet)</div>
 </div>
 
 <div id="currentMissionsPop2" class="pop">
