--- a/class/index.html
+++ b/class/index.html
@@ -229,11 +229,11 @@
     <div id="att2Button" class="otherButton ptr" onclick="populateNames2()">Attendance</div>
   </div>
   <div id="studentPopTopContainerDiv">
-    <div id="studentPopInsignia" class="ptr" onclick="populateStudentProperties(); studentMenuSwitch(4)"></div>
+    <div id="studentPopInsignia" class="ptr" onclick="loadRankTable();resetStudentMenu();"></div>
     <div id="studentPopInfo">
       <p id="studentPopRankName"></p>
       <p id="studentPopName" class="ptr" onclick="toggleAtt()"></p>
-      <p id="studentPopPts"></p>
+      <p id="studentPopPts" class="ptr" onclick="populateStudentProperties(); studentMenuSwitch(4)"></p>
     </div>
   </div>
   <div>
@@ -277,7 +277,7 @@
     <p id="mvProgressTableP"></p>
     <table id="mvProgressTable" class="progressBarTable"> </table>
   </div>
-  <div id="rankProgressTableDiv" class="ptr" onclick="loadRankTable()">
+  <div id="rankProgressTableDiv">
     <p id="rankProgressTableP"></p>
     <table id="rankProgressTable" class="progressBarTable"></table>
   </div>
@@ -692,7 +692,7 @@
 
 <div id="rankChartPop" class="pop">
   <div class="navigationButtonContainer">
-    <div class="backButton ptr" onclick="pop(['rankChartPop'],['studentStatsPop'])"><span>f</span></div>
+    <div class="backButton ptr" onclick="pop(['rankChartPop'],['missionsPop'])"><span>f</span></div>
   </div>
   <div id = "rankChartContainer">
   <table id="rankChartTable">
