--- a/class/index.html
+++ b/class/index.html
@@ -18,7 +18,7 @@
         <!-- <div id="allergiesButton" class="roundButton2 ptr" style="padding-top:6px" onclick="allergiesPop()">A</div> -->
         <div id="attCountButton" class="roundButton2 ptr" onclick="loadAttendees()">0</div>
         <div id="logButton" class="roundButton2 ptr" onclick="logPop()">F</div>
-        <div id="backupButton" class="roundButton2 ptr" onclick="populateBackup()">B</div>
+        <div id="backupButton" class="roundButton2 ptr" onclick="populateBackup()">R</div>
     </div>
     <input id="searchMain" class="searchField" type="text" placeholder="search names" onclick="this.select();" oninput="searchNamesMain()"/>
     <div id="nameList"></div>
