--- a/class/index.html
+++ b/class/index.html
@@ -265,29 +265,31 @@
 </div>
 
 <div id="studentStatsPop" class="pop" style="padding-top:0px">
-  <div id="totalProgressTableDiv">
-    <p id="totalProgressTableP"></p>
-    <table id="totalProgressTable" class="progressBarTable"></table>
-  </div>
-  <div id="asProgressTableDiv">
-    <p id="asProgressTableP"></p>
-    <table id="asProgressTable" class="progressBarTable"></table>
-  </div>
-  <div id="mvProgressTableDiv">
-    <p id="mvProgressTableP"></p>
-    <table id="mvProgressTable" class="progressBarTable"> </table>
-  </div>
-  <div id="rankProgressTableDiv">
-    <p id="rankProgressTableP"></p>
-    <table id="rankProgressTable" class="progressBarTable"></table>
-  </div>
-  <div id="attProgressTableDiv" class="ptr" onclick="loadStudentAttStats()">
-    <p id="attProgressTableP"></p>
-    <table id="attProgressTable" class="progressBarTable"></table>
-  </div>
-  <div id="totalParticipationTableDiv">
-    <p id="totalParticipationTableP"></p>
-    <table id="totalParticipationTable" class="progressBarTable"></table>
+  <div style="width: 425px; margin: 0px auto">
+    <div id="totalProgressTableDiv">
+      <p id="totalProgressTableP"></p>
+      <table id="totalProgressTable" class="progressBarTable"></table>
+    </div>
+    <div id="asProgressTableDiv">
+      <p id="asProgressTableP"></p>
+      <table id="asProgressTable" class="progressBarTable"></table>
+    </div>
+    <div id="mvProgressTableDiv">
+      <p id="mvProgressTableP"></p>
+      <table id="mvProgressTable" class="progressBarTable"> </table>
+    </div>
+    <div id="rankProgressTableDiv">
+      <p id="rankProgressTableP"></p>
+      <table id="rankProgressTable" class="progressBarTable"></table>
+    </div>
+    <div id="attProgressTableDiv" class="ptr" onclick="loadStudentAttStats()">
+      <p id="attProgressTableP"></p>
+      <table id="attProgressTable" class="progressBarTable"></table>
+    </div>
+    <div id="totalParticipationTableDiv">
+      <p id="totalParticipationTableP"></p>
+      <table id="totalParticipationTable" class="progressBarTable"></table>
+    </div>
   </div>
   <div id="lbDiv">
     <p id="lbHeader">Leader Boards</p>
