--- a/class/index.html
+++ b/class/index.html
@@ -106,9 +106,9 @@
     <div class="navigationButtonContainer">
       <div class="backButton ptr" onclick="goHome()">f</div>
     </div>
-    <div class="button ptr" id="remindersButton" onclick="pop(['alertsPop'],['remindersPop']); populateReminders()">Reminders</div>
     <div class="button ptr" id="promoButton" onclick="loadPromos(); pop(['alertsPop'],['customListPop'])">Promotions</div>
     <div class="button ptr" id="bdButton" onclick="loadBds(); pop(['alertsPop'],['customListPop'])">Birthdays</div>
+    <div class="button ptr" id="remindersButton" onclick="pop(['alertsPop'],['remindersPop']); populateReminders()">Reminders</div>
     <div class="button ptr" id="photosNeededButton" onclick="loadNeededPhotos(); pop(['alertsPop'],['customListPop'])">Missing Photos</div>
     <div class="button ptr" id="emailsNeededButton" onclick="loadNeededEmails(); pop(['alertsPop'],['customListPop'])">Missing Emails</div>
     <div class="button ptr" id="bdNeededButton" onclick="loadNeededBds(); pop(['alertsPop'],['customListPop'])">Missing Birthdays</div>
@@ -267,7 +267,7 @@
 </div>
 
 <div id="studentStatsPop" class="pop" style="padding-top:0px">
-  <div style="width: 425px; margin: 0px auto">
+  <div>
     <div id="totalProgressTableDiv">
       <p id="totalProgressTableP"></p>
       <table id="totalProgressTable" class="progressBarTable"></table>
